# advent-of-code-2025

./: .gitignore  .pre-commit-config.yaml  README.md  aoc2025_day01.py  aoc2025_day02.py  aoc2025_day03.py  aoc2025_day04.py  aoc2025_day05.py  aoc2025_day06.py  aoc2025_day07.py  aoc2025_day08.py  aoc2025_day09.py  aoc2025_day10.py  aoc2025_day11.py  aoc2025_day12.py  data  pyproject.toml  template.py
scripts/: update_data_repo.sh
